--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,9 +1,8 @@
-version = 2.5.0
-
-project.git = true
-
+version                                      = "2.4.2"
+project.git                                  = true
 style                                        = defaultWithAlign
 maxColumn                                    = 120
+encoding                                     = "UTF-8"
 danglingParentheses                          = true
 align.openParenCallSite                      = false
 spaces.inImportCurlyBraces                   = true
@@ -13,10 +12,17 @@ unindentTopLevelOperators                    = true
 newlines.afterImplicitKWInVerticalMultiline  = true
 newlines.beforeImplicitKWInVerticalMultiline = true
 
-align.tokens = ["%", "%%", {code = "=>", owner = "Case"}, "extends", "=", ":=", "→", "++=", "|"]
+align.tokens = [ {code = "=>", owner = "Case"},
+                 {code = "%", owner = "Term.ApplyInfix"},
+                 {code = "%%", owner = "Term.ApplyInfix"}, "extends", "=", ":=", "→", "++=", "|"
+                 ]
 project.excludeFilters = [
   .scalafmt.conf
 ]
+continuationIndent {
+  callSite = 2
+  defnSite = 2
+}
 
 docstrings = javadoc
 
