--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: codecov/codecov-action@v1
       - name: Run tests
         run: sbt coverage test
       - name: Coverage Report
