--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -27,4 +27,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Formatting
-        run: sbt scalafmtSbtCheck scalafmtCheck test:scalafmtCheck
+        run: sbt  scalafmtCheck test:scalafmtCheck
