--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -9,19 +9,18 @@ on:
     branches:
       - master
 jobs:
-#  test:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - uses: codecov/codecov-action@v1
-#      - name: Run tests
-#        run: sbt coverage test
-#      - name: Coverage Report
-#        run: sbt coverageReport
-#      - name: Upload coverage to Codecov
-#        uses: codecov/codecov-action@v1
-#        with:
-#          fail_ci_if_error: true
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run tests
+        run: sbt coverage test
+      - name: Coverage Report
+        run: sbt coverageReport
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: true
   lint:
     runs-on: ubuntu-latest
     steps:
